Five day prediction and other updates